[gd_scene load_steps=9 format=2]

[ext_resource path="res://StartingRoom.png" type="Texture" id=1]
[ext_resource path="res://Room.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.02265, 49.8846 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 92.0032, 4.1287 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 41.2882, 4.1287 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 80.6604, 1.52961 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1.61205, 36.477 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 90.9975, 1.52961 )

[node name="StartingRoom" type="StaticBody2D"]
script = ExtResource( 2 )
opendoors = PoolStringArray( "Bottom" )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -96.4014, -0.10902 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 95.9958, -0.0307541 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( 0.0059967, -45.8754 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2( -50.6493, 45.7454 )
shape = SubResource( 3 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 50.5033, 46.0037 )
shape = SubResource( 3 )

[node name="BottomCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomCollision"]
position = Vector2( 3.18199, 52.3001 )
shape = SubResource( 4 )

[node name="RightCollision" type="Area2D" parent="."]
position = Vector2( 0, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCollision"]
position = Vector2( 102.836, 21.2104 )
shape = SubResource( 5 )

[node name="TopCollision" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCollision"]
position = Vector2( 0.060318, -52.0265 )
shape = SubResource( 6 )

[node name="LeftCollision" type="Area2D" parent="."]
position = Vector2( -102.75, 0.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCollision"]
position = Vector2( -0.0414429, 0.0778551 )
shape = SubResource( 5 )
